external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.move:4:11
  │
4 │         0 { f } = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected ';'
